--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "url": "https://github.com/Stuhl/javascript-entity-component-system"
   },
   "scripts": {
+    "dev": "parcel ./src/index.html",
     "test": "jest --verbose",
     "testWatch": "jest --verbose --watch",
     "doc": "./node_modules/.bin/esdoc"
@@ -25,6 +26,7 @@
   "devDependencies": {
     "esdoc": "^1.1.0",
     "esdoc-standard-plugin": "^1.0.0",
-    "jest": "^24.7.1"
+    "jest": "^24.7.1",
+    "parcel": "^2.8.3"
   }
 }
