--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
-    "lib": ["es2017", "dom"],
+    "lib": ["es2017", "es7", "es6", "dom"],
     "target": "es5",
+    "module": "commonjs",
+    "esModuleInterop": true,
+    "declaration": true,
+    "allowSyntheticDefaultImports": true
   },
   "typeDocOptions": {
     "entryPoints": [".src/index.ts"],
